trying to fix a bug (collapsed margin on Safari)

--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,7 @@ h3 {font-size: 24px;
                 color: white;
                 margin-top: 16px;
                 border: none;
+                padding: 0px;
                 margin-bottom: 0px;}
 
 footer        {background-color: #07043b;
